# AstroDroid2025

./: .gitmodules  README.md
diagnostics/: pidTest.py
exp/BoardHCSR04/: CMakeLists.txt
exp/BoardHCSR04/src/: CMakeLists.txt  main.cpp
exp/BoardLEDs/: CMakeLists.txt
exp/BoardLEDs/src/: AstroDroidConfig.h  CMakeLists.txt  LatchedSwitch.cpp  LatchedSwitch.h  main.cpp
exp/BoardPID/: CMakeLists.txt
exp/BoardPID/src/: CMakeLists.txt  MotorMgr.cpp  MotorPID.cpp  MotorPID.h  main.cpp
exp/INA3221/: CMakeLists.txt
exp/INA3221/src/: Adafruit_BusIO_Register.cpp  Adafruit_BusIO_Register.h  Adafruit_I2CDevice.cpp  Adafruit_I2CDevice.h  Adafruit_INA3221.cpp  Adafruit_INA3221.h  CMakeLists.txt  Lipo3S.cpp  Lipo3S.h  main.cpp
exp/LX-16AClass/: CMakeLists.txt
exp/LX-16AClass/src/: CMakeLists.txt  LX16A.cpp  LX16A.h  main.cpp
exp/LX16-A/src/: CMakeLists.txt  main.cpp
exp/RPZeroNeoPixel/: CMakeLists.txt
exp/RPZeroNeoPixel/src/: AstroDroidConfig.h  CMakeLists.txt  main.cpp
exp/StepperHall/: CMakeLists.txt
exp/StepperHall/src/: CMakeLists.txt  Stepper.h  main.cpp
exp/TwistControl/: twistToWheelJog.py
firmware/neck/: CMakeLists.txt
firmware/neck/src/: AstroDroidConfig.h  CMakeLists.txt  ConfigEntity.cpp  ConfigEntity.h  JointAgent.cpp  JointAgent.h  LX16A.cpp  LX16A.h  NVSJson.cpp  Stepper.cpp  Stepper.h  main.cpp  uRosBridge.h
firmware/wheel/: CMakeLists.txt  picoOnboardNVS.cmake
firmware/wheel/src/: AstroDroidConfig.h  AstroEntities.cpp  AstroEntities.h  CMakeLists.txt  ConfigEntity.cpp  ConfigEntity.h  HCSR04Agent.cpp  HCSR04Agent.h  HCSR04Range.cpp  (+12 more)
